# technopark_algorithms

./: .gitignore  CMakeLists.txt  README.md  task1.cpp  task_1_2.cpp  task_2.cpp  task_2_1.cpp  task_3.cpp  task_3_1.cpp  task_4_1.cpp  task_4_2.cpp  task_5_4.cpp  task_6_3.cpp  task_7_2.cpp
include/: arc_graph.h  i_graph.h  list_graph.h  matrix_graph.h  set_graph.h
src/: arc_graph.cpp  list_graph.cpp  matrix_graph.cpp  set_graph.cpp
